[package]
name = "todo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = "1.0.159"
tokio = "1.27.0"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
postgres = { version = "0.19", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
